<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diccionario.BuscarPalabra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/txt_titulo_tres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/txt_titulo_tres"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textAlignment="center"/>

        <RadioGroup
            android:id="@+id/rg_idioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton android:id="@+id/radio_espaniol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/txt_espaniol"/>

            <RadioButton android:id="@+id/radio_ingles"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ingles"/>
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/txt_palabra_a_buscar"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/ed_palabra_ingles"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="25dp"
                android:layout_weight="1"
                android:hint="@string/txt_hint_edit_espaniol"
                android:inputType="textPersonName"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_buscar_palabra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/txt_buscar_palabra"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_msg_palabra_encontrada"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/txt_palabra_encontrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textAlignment="center"/>


    </LinearLayout>


    <Button
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_volver"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>