<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cinepolis.Cinepolis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/cinepolis"
        android:layout_margin="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/nombre"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/ed_nombre_comprador"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/black"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_comprador"
                android:inputType="text"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/txt_cantidad_compradores"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/ed_cantidad_compradores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:paddingHorizontal="25dp"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/txt_ex_cant"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/txt_tarjeta_cineco"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <RadioGroup
                android:id="@+id/rg_operacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintTop_toBottomOf="@+id/ed_numero_dos"
                app:layout_constraintStart_toStartOf="parent">
                <RadioButton android:id="@+id/radio_si"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_si"/>
                <RadioButton android:id="@+id/radio_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_no"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/txt_cantidad_boletos"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/ed_cantidad_boletos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:paddingHorizontal="25dp"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/txt_ex_cant"
                android:inputType="number"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/txt_boletos_pagar"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/txt_resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:layout_marginHorizontal="15dp"
                android:textSize="22sp"
                android:text="$ ..."
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:onClick="calcular"
                android:layout_gravity="center" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>