<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ejemplo1.Operaciones">


    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_numero_uno"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/num_1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        />
    <EditText
        android:id="@+id/ed_numero_dos"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/num_2"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_numero_uno"
        />

    <RadioGroup
        android:id="@+id/rg_operacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@+id/ed_numero_dos"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton android:id="@+id/radio_suma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sumar"/>
        <RadioButton android:id="@+id/radio_resta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Restar"/>
        <RadioButton android:id="@+id/radio_multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Multiplicar"/>
        <RadioButton android:id="@+id/radio_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dividir"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/calcular"
        android:onClick="validarOperacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_operacion" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />


</androidx.constraintlayout.widget.ConstraintLayout>